force-app/main/default/objects/Eledo_Template__c/Eledo_Template__c.object-meta.xml
<CustomObject>
    <label>Eledo Template</label>
    <nameField>
        <label>Eledo Template Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Eledo Templates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>