force-app/main/default/objects/Eledo_Template__c/fields/Object__c.field-meta.xml
<CustomField>
    <fullName>Object__c</fullName>
    <description>Used to filter available Eledo_Template__c&apos;s in EledoGeneratePDF lwc.</description>
    <inlineHelpText>Required for Template selection filtering on GeneratePDF component, which can be placed on different sObject record pages.</inlineHelpText>
    <label>Object</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>