force-app/main/default/objects/Eledo_Template__c/fields/SOQL__c.field-meta.xml
<CustomField>
    <fullName>SOQL__c</fullName>
    <description>Query used to retrieve specific data used for this Eledo Template configuration, when sending data to Eledo PDF Generator.</description>
    <inlineHelpText>Query used to retrieve specific data used for this Eledo Template configuration, when sending data to Eledo PDF Generator.</inlineHelpText>
    <label>SOQL</label>
    <length>100000</length>
    <type>LongTextArea</type>
</CustomField>