force-app/main/default/objects/Eledo_Template__c/fields/Template_ID__c.field-meta.xml
<CustomField>
    <fullName>Template_ID__c</fullName>
    <description>Template ID in Eledo service.</description>
    <externalId>true</externalId>
    <inlineHelpText>Currently there is only one configuration per template allowed. If you try to add more configurations to the same template, you will get &apos;Error Creating Record&apos;.</inlineHelpText>
    <label>Template ID</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>