force-app/main/default/objects/Eledo_Template__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Object__c</columns>
    <columns>Template_ID__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>